# libodb-sqlite

./: CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libodb-sqlite-vc11.sln  libodb-sqlite-vc12.VC.VC.opendb  libodb-sqlite-vc12.sln  libodb-sqlite-vc8.sln  libodb-sqlite.pc.in
cmake/: libodb-sqlite-config.cmake
etc/sqlite/: sqlite3-vc11.sln  sqlite3-vc11.vcxproj  sqlite3-vc12.sln  sqlite3-vc12.vcxproj  sqlite3-vc8.sln  sqlite3-vc8.vcproj
m4/: libsqlite.m4
