# file      : Makefile.am
# copyright : Copyright (c) 2009-2015 Code Synthesis Tools CC
# license   : GNU GPL v2; see accompanying LICENSE file

SUBDIRS = odb/sqlite
dist_doc_DATA = GPLv2 LICENSE README NEWS version
EXTRA_DIST = INSTALL libodb-sqlite-vc8.sln libodb-sqlite-vc9.sln libodb-sqlite-vc10.sln libodb-sqlite-vc11.sln libodb-sqlite-vc12.sln etc/sqlite/sqlite3-vc9.sln etc/sqlite/sqlite3-vc9.vcproj etc/sqlite/sqlite3-vc8.sln etc/sqlite/sqlite3-vc11.vcxproj.filters etc/sqlite/sqlite3-vc8.vcproj etc/sqlite/sqlite3-vc12.vcxproj.filters etc/sqlite/sqlite3-vc11.vcxproj etc/sqlite/sqlite3-vc10.vcxproj.filters etc/sqlite/sqlite3-vc12.vcxproj etc/sqlite/sqlite3-vc10.sln etc/sqlite/sqlite3-vc10.vcxproj etc/sqlite/sqlite3-vc12.sln etc/sqlite/sqlite3-vc11.sln etc/sqlite/README bootstrap
ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA= libodb-sqlite.pc
